[gd_scene load_steps=2 format=3 uid="uid://rpcwpia8qv6h"]

[ext_resource type="Script" uid="uid://bgr1iodw0caiy" path="res://Scenes/NPC/Shop/ShopUi.gd" id="1_vqjql"]

[node name="ShopUi" type="CanvasLayer"]
script = ExtResource("1_vqjql")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5294118)

[node name="ShopLabel" type="Label" parent="Control"]
layout_mode = 1
offset_left = 65.0
offset_top = 50.0
offset_right = 238.0
offset_bottom = 138.0
theme_override_font_sizes/font_size = 64
text = "Shop"
uppercase = true

[node name="ItemLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 340.0
offset_top = -340.0
offset_right = 540.0
offset_bottom = -291.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "ITEM"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 340.0
offset_top = -140.0
offset_right = 540.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "DESC"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 340.0
offset_top = 60.0
offset_right = 540.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 0
offset_left = 103.0
offset_top = 160.0
offset_right = 1003.0
offset_bottom = 1060.0
scale = Vector2(0.89, 1)
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4
